Shoot me now.